# rt-road-recognition

./: .env  .gitignore  pyproject.toml
src/: notebook.ipynb
src/app/: __init__.py
src/data/: settings.py
src/data/camvid/: __init__.py  camvid.py  meta.py
src/datasets/: __init__.py  ds_path.py
src/datasets/camvid/: camvid.py  meta.py
src/models/: __init__.py  misc.py
src/models/deeplabv3p/: __init__.py  model.py  train.py  try.py
tests/test_models/: test_deeplabv3p.py
